# nat-poc

./: .gitignore  Cargo.toml  README.md
src/: input.rs  main.rs  text_effects.rs
src/tests/: mod.rs
src/utils/: mod.rs  perms.rs
