[package]
name = "nat-poc"
description = "A proof of concept re-write of natls"
version = "0.1.6"
authors = ["Will Lane <williamlane923@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
termion = "1.5.5"
