[package]
name = "nat-poc"
description = "A proof of concept re-write of natls"
version = "0.2.2"
authors = ["Will Lane <williamlane923@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
filetime = "0.2.13"
humansize = "1.1.0"
libc = "0.2.80"
pretty-bytes = "0.2.2"
structopt = "0.3.20"
termion = "1.5.5"
users = "0.11.0"
